Motion Path step is not taken into account #61791

Closed
opened 2019-02-21 11:36:51 +01:00 by Julien Duroure · 5 comments
Member

System Information
Operating system: Mint 19
Graphics card: Nvidia 860M

Blender Version
Broken: 2.80 build of Feb. 21rst
Worked: 2.79

Short description of error
Motion Path step is not taken into account

Exact steps for others to reproduce the error

  • Same issue in object motionpath or bone motion path
  • add an animation to default cube
  • add motion path with step = 2
  • A dot is displayed every frame instead of every 2 frames
  • Seems displayed frame number take into account the step, but not the motion path dots
**System Information** Operating system: Mint 19 Graphics card: Nvidia 860M **Blender Version** Broken: 2.80 build of Feb. 21rst Worked: 2.79 **Short description of error** Motion Path step is not taken into account **Exact steps for others to reproduce the error** * Same issue in object motionpath or bone motion path * add an animation to default cube * add motion path with step = 2 * A dot is displayed every frame instead of every 2 frames * Seems displayed frame number take into account the step, but not the motion path dots
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Checking...

Checking...

This issue was referenced by 4f0b61f15b

This issue was referenced by 4f0b61f15bb46bfb8a949b314d05130c0425c816
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61791
No description provided.