Fix T61791: Motion path step is not taken into account